php課題7初回コミット

--- a/php/thread_detail.css
+++ b/php/thread_detail.css
@@ -32,7 +32,10 @@ header {
     color: #aaa; 
 }
 
-.heart_clear {
-    text-decoration: none;
-    color: black;
+.heart_red {
+    color: red;
+}
+
+.like {
+    border-bottom: solid #aaa;
 }
